# taupy

./: .gitignore  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
TauPy/: __init__.py  app.py  devui.py  dispatcher.py  reloader.py  server.py  theme.py  var.py
TauPy/cli/: main.py  version.py
TauPy/cli/commands/: build.py  dev.py  new.py  run.py
TauPy/events/: events.py
TauPy/templates/: base.html
TauPy/templates/vite-react/: eslint.config.js  package.json  tsconfig.app.json  tsconfig.json
TauPy/utils/: client.js  template.py  template_react.py
TauPy/widgets/: __init__.py  component.py  elements.py  factory.py
TauPy/window/: Cargo.toml  build.rs
TauPy/window/src/: config.rs  main.rs  server.rs  (+1 more)
docs/: build.md  configuration.md  faq.md  how-it-works.md  index.md  install.md  quickstart.md  react.md  routing.md  troubleshooting.md  vanilla.md
docs/cli/: build.md  config.md  dev.md  doctor.md  index.md  info.md  new.md
docs/python-ui/: api.md  layout.md  overview.md  state.md
taupy/: __init__.py  app.py  devui.py  dispatcher.py  reloader.py  router.py  server.py  state.py  var.py
taupy/cli/: main.py  version.py
taupy/events/: __init__.py
taupy/templates/: base.html
taupy/utils/: client.js  template.py
taupy/widgets/: __init__.py  component.py  elements.py  factory.py  layout.py
taupy/window/: Cargo.toml
tests/: test_components_basic.py  test_dispatcher.py  test_events.py  test_layouts.py  test_router.py  test_server_broadcast.py  test_state.py
utils/: template.py
(+29 files in other folders)
