[tool.poetry]
name = "taupy"
version = "0.1.0"
description = "TauPy Framework"
authors = ["S1avv"]
readme = "README.md"
packages = [
    { include = "TauPy" }
]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
packaging = "^25.0"
click = "^8.3.0"
pytest = "9.0.0"

[tool.poetry.scripts]
taupy = "TauPy.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
